--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'org.koin:koin-androidx-scope:2.0.1'
     implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
